@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2025-07-07T12:29:42Z",
+  "timestamp" : "2025-07-08T01:12:19Z",
   "count_outdated" : 5086,
   "uniques_outdated" : 2736,
-  "count" : 5165,
-  "uniques" : 2799,
+  "count" : 5166,
+  "uniques" : 2800,
   "clones" : [
     {
       "timestamp": "2025-06-24T00:00:00Z",
@@ -124,12 +124,12 @@
     },
     {
       "timestamp": "2025-07-07T00:00:00Z",
-      "count": 8,
-      "count_minmax": [ 8, 8 ],
-      "count_decinc": [ 0, 8 ],
-      "uniques": 7,
-      "uniques_minmax": [ 7, 7 ],
-      "uniques_decinc": [ 0, 7 ]
+      "count": 9,
+      "count_minmax": [ 8, 9 ],
+      "count_decinc": [ 0, 9 ],
+      "uniques": 8,
+      "uniques_minmax": [ 7, 8 ],
+      "uniques_decinc": [ 0, 8 ]
     }
   ]
 }
