@@ -1,5 +1,5 @@
 {
-  "count": 79,
+  "count": 80,
   "uniques": 43,
   "clones": [
     {
@@ -69,8 +69,8 @@
     },
     {
       "timestamp": "2025-07-07T00:00:00Z",
-      "count": 8,
-      "uniques": 7
+      "count": 9,
+      "uniques": 8
     }
   ]
 }
